# stat_ml_a2

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  Readme.txt  pyproject.toml  requirements.txt
data/processed/: airbnb_features.parquet  airbnb_features_generalization.parquet  airbnb_features_latest.parquet  airbnb_features_previous_all.parquet  airbnb_features_test.parquet  airbnb_features_train.parquet  airbnb_sbert_embeddings_generalization.parquet  airbnb_sbert_embeddings_test.parquet  airbnb_sbert_embeddings_train.parquet  airbnb_sbert_input_generalization.parquet  airbnb_sbert_input_test.parquet  airbnb_sbert_input_train.parquet
docs/: airbnb_features.md  git_log.md  meeting_minutes.md  project_plan.md  spec_summary.md
notebooks/: colab.ipynb  embeddings.ipynb  feature_engineering.ipynb  fttransformer.ipynb
report/: references.bib  report.tex
scripts/: build_airbnb_features.py  build_sbert_inputs.py  create_airbnb_eval_splits.py  evaluate_test_set.py  import_airbnb.py  run_experiment.py  run_pipeline.sh  smoke_check.py
src/comp90051_project/: __init__.py  airbnb_features.py  cv.py  metrics.py  models.py  tuning.py
tests/: test_airbnb_features.py  test_cv.py  test_metrics.py  test_tuning.py
